--- a/resources/sass/layout/_master.scss
+++ b/resources/sass/layout/_master.scss
@@ -2,6 +2,7 @@ th{
     text-align: left; 
     padding: 0.75rem; 
     border: 0.1em solid #e9ecef;
+    background-color: silver;
 }
 
 td{ 
@@ -15,4 +16,18 @@ td{
     width: 100%; 
     font-size: 1rem; 
     font-family: 'Montserrat', sans-serif;
+}
+
+svg{
+    width:24px;
+    height:24px;
+}
+
+input{
+    width: 100%; 
+    height: 2rem;
+}
+
+button:hover{
+    background-color: royalblue;
 }
