--- a/public/admin/css/app.css
+++ b/public/admin/css/app.css
@@ -1,5 +1,6 @@
 .formulario {
   width: 40%;
+  justify-content: right;
 }
 
 .formulario .formulario-titulo {
@@ -87,7 +88,7 @@ button:hover {
 }
 
 .tabla {
-  width: 40%;
+  width: 50%;
 }
 
 .tabla .tabla-titulo {
