--- a/public/admin/css/app.css
+++ b/public/admin/css/app.css
@@ -83,8 +83,16 @@ label {
   font-weight: bold;
 }
 
-button:hover {
-  background-color: royalblue;
+.boton-borrar:hover {
+  fill: red;
+}
+
+.boton-editar:hover {
+  fill: blue;
+}
+
+.boton-guardar:hover {
+  fill: blue;
 }
 
 .tabla {
