--- a/resources/sass/admin/desktop/layout/_form.scss
+++ b/resources/sass/admin/desktop/layout/_form.scss
@@ -1,11 +1,12 @@
 .formulario{
-    width: 40%;
+    width: 50%;
     justify-content: right;
+    margin: 0 auto;
 }
 
 .formulario .formulario-titulo{
-    margin-bottom: 10%; 
     width: 100%; 
+    justify-content: center;
 }
 
 .formulario .formulario-titulo h2{
