--- a/resources/sass/admin/desktop/layout/_master.scss
+++ b/resources/sass/admin/desktop/layout/_master.scss
@@ -1,3 +1,9 @@
+// globales // 
+
+body{
+    margin: 0;
+}
+
 th{
     text-align: left; 
     padding: 0.75rem; 
@@ -10,7 +16,19 @@ td{
     border: 0.1em solid #e9ecef;
 }
 
-.pantalla50{
+svg{
+    width:30px;
+    height:30px; 
+}
+
+input{
+    width: 100%; 
+    height: 2rem;
+    font-size: 1em;
+}
+
+
+.global-container{
     display: flex; 
     justify-content: space-around;
     width: 100%; 
@@ -18,16 +36,8 @@ td{
     font-family: 'Montserrat', sans-serif;
 }
 
-svg{
-    width:24px;
-    height:24px;
-    
-}
-
-input{
-    width: 100%; 
-    height: 2rem;
-    font-size: 1em;
+.admin-faq-container{
+    width: 90%;
 }
 
 textarea{
