--- a/resources/sass/admin/mobile/layout/_master.scss
+++ b/resources/sass/admin/mobile/layout/_master.scss
@@ -1,8 +1,16 @@
+body{
+    margin: 0;
+}
+
 th{
     text-align: left; 
     padding: 0.75em; 
     border: 0.1em solid #e9ecef;
     background-color: silver;
+}
+
+.global-container{
+    width: 100%;
 }
 
 td{ 
@@ -48,4 +56,3 @@ label{
 .boton-guardar:hover{
     fill: blue;
 }
-
