--- a/resources/sass/admin/desktop/layout/_form.scss
+++ b/resources/sass/admin/desktop/layout/_form.scss
@@ -10,7 +10,7 @@
 }
 
 .formulario .formulario-titulo h2{
-    font-size: 1.2rem; 
+    font-size: 1.2em;
     text-align: center;  
     margin-bottom: 10%; 
     font-family: 'Montserrat', sans-serif; 
