--- a/resources/sass/admin/desktop/layout/_master.scss
+++ b/resources/sass/admin/desktop/layout/_master.scss
@@ -17,8 +17,8 @@ td{
 }
 
 svg{
-    width:30px;
-    height:30px; 
+    width:21px;
+    height:21px; 
 }
 
 input{
@@ -32,7 +32,8 @@ input{
     display: flex; 
     justify-content: space-around;
     width: 100%; 
-    font-size: 1rem; 
+    font-size: 0.9em; 
+    font-weight: bold;
     font-family: 'Montserrat', sans-serif;
 }
 
