--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -91,7 +91,7 @@ label {
 }
 
 .formulario {
-  width: 50%;
+  width: 90%;
   justify-content: right;
   margin: 0 auto;
 }
@@ -190,4 +190,24 @@ li {
 
 .dropdown-hidden li:hover {
   color: blueviolet;
+}
+
+.tabs {
+  display: flex;
+}
+
+.tabs .tab-button {
+  background-color: cadetblue;
+  margin-right: 1em;
+}
+
+.tabs .tab-content {
+  max-height: 0;
+  overflow: hidden;
+  max-width: 0;
+}
+
+.tabs.active .tab-content {
+  display: block;
+  height: 100vh;
 }
