--- a/public/admin/mobile/css/app.css
+++ b/public/admin/mobile/css/app.css
@@ -14,8 +14,11 @@ th {
 }
 
 td {
-  padding: 0.75em;
   border: 0.1em solid #e9ecef;
+}
+
+tr {
+  width: 25%;
 }
 
 .pantalla50 {
@@ -57,7 +60,7 @@ label {
 }
 
 .tabla {
-  width: 90%;
+  width: 100%;
 }
 
 .tabla .tabla-titulo {
@@ -182,4 +185,83 @@ li {
 
 .dropdown-hidden li:hover {
   color: blueviolet;
+}
+
+.content {
+  padding: 0.1em 0;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.swipe-element {
+  position: relative;
+  width: 100%;
+  height: 60px;
+}
+
+.swipe-front {
+  position: absolute;
+  width: 100%;
+  height: 60px;
+  left: 0;
+  top: 0;
+  margin: 0;
+  box-sizing: border-box;
+  text-align: center;
+  color: #ecf0f1;
+  line-height: 44px;
+  vertical-align: center;
+  background-color: #4285f4;
+  z-index: 2;
+  /* // [START touch-action-example] */
+  /* Pass all touches to javascript */
+  touch-action: none;
+  /* // [END touch-action-example] */
+}
+
+.swipe-back {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 60px;
+  left: 0;
+  top: 0;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+  box-sizing: border-box;
+}
+
+.swipe-back button {
+  display: inline-block;
+  width: 40px;
+  height: 40px;
+  background-color: #4285f4;
+  border-radius: 100%;
+  border-style: none;
+}
+
+.swipe-back button:nth-child(2) {
+  background-color: #0f9d58;
+}
+
+.swipe-back button:nth-child(3) {
+  background-color: #cb4437;
+}
+
+.swipe-back button:nth-child(4) {
+  background-color: #f4b400;
+}
+
+.promote-layer {
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+}
+
+.swipe-back .boton-editar {
+  display: none;
+}
+
+.swipe-back .boton-borrar {
+  display: none;
 }
