--- a/resources/sass/admin/desktop/layout/_form.scss
+++ b/resources/sass/admin/desktop/layout/_form.scss
@@ -1,7 +1,7 @@
 .formulario{
     width: 90%;
     justify-content: right;
-    margin: 0 auto;
+    margin: 5em 0;
 }
 
 .formulario .formulario-titulo{
@@ -11,8 +11,8 @@
 
 .formulario .formulario-titulo h2{
     font-size: 1.2em;
-    text-align: center;  
-    margin-bottom: 10%; 
+    text-align: left;  
+    margin-bottom: 2%; 
     font-family: 'Montserrat', sans-serif; 
     font-weight: bolder;
 }
