--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -4,14 +4,18 @@ body {
 
 th {
   text-align: left;
-  padding: 0.75rem;
+  padding: 0.2rem;
   border: 0.1em solid #e9ecef;
   background-color: silver;
 }
 
 td {
-  padding: 0.75rem;
+  padding: 0.1rem;
   border: 0.1em solid #e9ecef;
+}
+
+select {
+  width: 100%;
 }
 
 svg {
@@ -30,7 +34,6 @@ input {
   justify-content: space-around;
   width: 100%;
   font-size: 0.9em;
-  font-weight: bold;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -67,7 +70,7 @@ label {
 }
 
 .tabla .tabla-titulo h2 {
-  font-size: 1em;
+  font-size: 1.2em;
   text-align: center;
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
@@ -93,7 +96,7 @@ label {
 .formulario {
   width: 90%;
   justify-content: right;
-  margin: 0 auto;
+  margin: 5em 0;
 }
 
 .formulario .formulario-titulo {
@@ -103,8 +106,8 @@ label {
 
 .formulario .formulario-titulo h2 {
   font-size: 1.2em;
-  text-align: center;
-  margin-bottom: 10%;
+  text-align: left;
+  margin-bottom: 2%;
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
 }
@@ -142,7 +145,6 @@ label {
   font-weight: bold;
   font-size: 1.2em;
   background-color: aquamarine;
-  padding: 0.5em;
   margin-top: 0;
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
@@ -193,27 +195,36 @@ li {
 }
 
 .tabs {
+  width: 50%;
   display: flex;
 }
-
-.tabs .tab-button {
-  background-color: cadetblue;
-  margin-right: 1em;
-}
-
-.tabs .tab-content {
+.tabs .tab .tab-content {
   max-height: 0;
   overflow: hidden;
-  max-width: 0;
 }
-
-.tabs.active .tab-content {
+.tabs .tab.active {
+  width: 60%;
+}
+.tabs .tab.active .tab-content {
   display: block;
-  height: 100vh;
+  max-height: 100vh;
+  overflow: visible;
+  width: 100%;
 }
 
-tr {
-  background-color: cornflowerblue;
+.tabs-buttons {
+  display: flex;
+  background-color: #c2efe1;
+  border: solid grey;
+  margin-bottom: 2em;
+}
+.tabs-buttons .tab-button {
+  margin-right: 1em;
+  cursor: pointer;
+  padding: 0.02em;
+}
+.tabs-buttons .tab-button:hover {
+  background-color: aquamarine;
 }
 
 .content {
@@ -241,7 +252,6 @@ tr {
   color: #ecf0f1;
   line-height: 44px;
   vertical-align: center;
-  background-color: #4285f4;
   z-index: 2;
   /* // [START touch-action-example] */
   /* Pass all touches to javascript */
