--- a/resources/sass/admin/desktop/layout/_master.scss
+++ b/resources/sass/admin/desktop/layout/_master.scss
@@ -6,14 +6,18 @@ body{
 
 th{
     text-align: left; 
-    padding: 0.75rem; 
+    padding: 0.2rem; 
     border: 0.1em solid #e9ecef;
     background-color: silver;
 }
 
 td{ 
-    padding: 0.75rem; 
+    padding: 0.1rem; 
     border: 0.1em solid #e9ecef;
+}
+
+select{
+    width: 100%;
 }
 
 svg{
@@ -33,7 +37,6 @@ input{
     justify-content: space-around;
     width: 100%; 
     font-size: 0.9em; 
-    font-weight: bold;
     font-family: 'Montserrat', sans-serif;
 }
 
