--- a/public/admin/mobile/css/app.css
+++ b/public/admin/mobile/css/app.css
@@ -195,12 +195,14 @@ li {
 
 .swipe-element {
   position: relative;
+  margin-bottom: 0.5em;
   width: 100%;
   height: 60px;
 }
 
 .swipe-front {
   position: absolute;
+  display: flex;
   width: 100%;
   height: 60px;
   left: 0;
@@ -263,5 +265,9 @@ li {
 }
 
 .swipe-back .boton-borrar {
+  display: none;
+}
+
+.tabla .tabla-contenedor .tabla-cabecera {
   display: none;
 }
