--- a/resources/sass/admin/mobile/layout/_faqs.scss
+++ b/resources/sass/admin/mobile/layout/_faqs.scss
@@ -20,6 +20,7 @@
 
     width: 100%;
     height: 60px;
+    border: solid 0.2em #c2efe1;;
 
     left: 0;
     top: 0;
@@ -28,12 +29,11 @@
     box-sizing: border-box;
 
     text-align: center;
-
-    color: #ecf0f1;
+   
     line-height: 44px;
     vertical-align: center;
 
-    background-color: #4285f4;
+
 
     z-index: 2;
 
@@ -111,4 +111,8 @@
 
   .tabla .tabla-contenedor .tabla-cabecera{
     display: none;
+  }
+
+  .swipe-content{
+    padding: 0;
   }
