--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -33,7 +33,7 @@ input {
   display: flex;
   justify-content: space-around;
   width: 100%;
-  font-size: 0.9em;
+  font-size: 0.85em;
   font-family: "Montserrat", sans-serif;
 }
 
@@ -94,7 +94,7 @@ label {
 }
 
 .formulario {
-  width: 90%;
+  width: 40%;
   justify-content: right;
   margin: 5em 0;
 }
@@ -241,11 +241,27 @@ li {
 .swipe-front .table-content {
   display: flex;
   margin-right: 2em;
+  width: 100%;
+}
+.swipe-front .table-content p {
+  width: 40%;
+  margin: 0 auto;
+}
+
+.tabla .table-header {
+  display: flex;
+  background-color: #c2efe1;
+  font-weight: bold;
+  margin-bottom: 1em;
+  padding: 0;
+}
+.tabla .table-header p {
+  margin-right: 40%;
 }
 
 .table-filter {
   width: 30%;
-  margin: 2em auto;
+  margin: 2em 4em;
   font-size: 1em;
 }
 .table-filter.filter-active .table-filter-container {
