--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: #F0FAFF;
 }
 
 th {
@@ -15,18 +16,12 @@ td {
 }
 
 select {
-  width: 100%;
+  width: 30%;
 }
 
 svg {
-  width: 21px;
-  height: 21px;
-}
-
-input {
-  width: 100%;
-  height: 2rem;
-  font-size: 1em;
+  width: 22px;
+  height: 22px;
 }
 
 .global-container {
@@ -38,6 +33,8 @@ input {
 }
 
 .admin-faq-container {
+  display: flex;
+  margin-right: 2em;
   width: 90%;
 }
 
@@ -63,6 +60,9 @@ label {
 
 .tabla {
   width: 100%;
+  margin: 2em 0;
+  border: 1px groove;
+  background-color: #fff;
 }
 
 .tabla .tabla-titulo {
@@ -94,14 +94,18 @@ label {
 }
 
 .formulario {
-  width: 40%;
-  justify-content: right;
-  margin: 5em 0;
+  width: 30%;
+  margin: 2em 2em;
+  padding: 1em;
+  border: 1px groove;
+  border-radius: 4px;
+  background-color: #fff;
 }
 
 .formulario .formulario-titulo {
   width: 100%;
-  justify-content: center;
+  margin-bottom: 1em;
+  border-bottom: groove;
 }
 
 .formulario .formulario-titulo h2 {
@@ -131,12 +135,8 @@ label {
 }
 
 .formulario .formulario-contenedor .formulario-grupo .formulario-input input {
-  padding: 0.2em;
-  width: 100%;
-}
-
-.formulario .formulario-contenedor .formulario-grupo .formulario-input input {
-  padding: 0.2em;
+  padding: 0;
+  margin: 0;
   width: 100%;
 }
 
