--- a/resources/sass/admin/desktop/layout/_master.scss
+++ b/resources/sass/admin/desktop/layout/_master.scss
@@ -2,6 +2,7 @@
 
 body{
     margin: 0;
+    background-color: #F0FAFF;
 }
 
 th{
@@ -17,20 +18,13 @@ td{
 }
 
 select{
-    width: 100%;
+    width: 30%;
 }
 
 svg{
-    width:21px;
-    height:21px; 
+    width:22px;
+    height:22px; 
 }
-
-input{
-    width: 100%; 
-    height: 2rem;
-    font-size: 1em;
-}
-
 
 .global-container{
     display: flex; 
@@ -41,6 +35,8 @@ input{
 }
 
 .admin-faq-container{
+    display: flex;
+    margin-right: 2em;
     width: 90%;
 }
 
