--- a/resources/sass/admin/desktop/layout/_faqs.scss
+++ b/resources/sass/admin/desktop/layout/_faqs.scss
@@ -17,18 +17,7 @@
 
     .table-content p{
       width: 40%;
-      margin: 0 auto;
+      margin: 0;
     }
 
   }
-.tabla .table-header {
-  display: flex;
-  background-color: #c2efe1;
-  font-weight: bold;
-  margin-bottom: 1em;
-  padding: 0;
-  
-  p{
-    margin-right: 40%;
-  }
-}
