--- a/resources/sass/admin/mobile/layout/_form.scss
+++ b/resources/sass/admin/mobile/layout/_form.scss
@@ -2,6 +2,9 @@
     width: 90%;
     justify-content: right;
     margin: auto;
+    border-radius: 4px;
+    background-color: #fff;
+    border-bottom: groove;
 }
 
 .formulario .formulario-titulo{
