--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -63,10 +63,22 @@ label {
   margin: 2em 0;
   border: 1px groove;
   background-color: #fff;
+  padding: 1em;
 }
 
 .tabla .tabla-titulo {
   width: 100%;
+  border-bottom: groove;
+}
+
+.tabla .table-header {
+  display: flex;
+  font-weight: bold;
+  margin-bottom: 1em;
+  padding: 0;
+}
+.tabla .table-header p {
+  margin-right: 40%;
 }
 
 .tabla .tabla-titulo h2 {
@@ -111,7 +123,6 @@ label {
 .formulario .formulario-titulo h2 {
   font-size: 1.2em;
   text-align: left;
-  margin-bottom: 2%;
   font-family: "Montserrat", sans-serif;
   font-weight: bolder;
 }
@@ -241,42 +252,31 @@ li {
 }
 .swipe-front .table-content p {
   width: 40%;
-  margin: 0 auto;
-}
-
-.tabla .table-header {
-  display: flex;
-  background-color: #c2efe1;
-  font-weight: bold;
-  margin-bottom: 1em;
-  padding: 0;
-}
-.tabla .table-header p {
-  margin-right: 40%;
+  margin: 0;
 }
 
 .table-filter {
-  width: 30%;
-  margin: 2em 4em;
+  width: 100%;
   font-size: 1em;
+  background-color: #cccccc;
+  cursor: pointer;
 }
 .table-filter.filter-active .table-filter-container {
   max-height: 50vh;
   overflow: visible;
+  cursor: pointer;
+}
+.table-filter .table-filter-buttons {
+  margin: 0 1em;
 }
 .table-filter .table-filter-container {
   max-height: 0;
   overflow: hidden;
 }
-.table-filter .table-filter-container .filter-form .one-column .form-group .form-label {
-  margin-bottom: 1em;
-}
-.table-filter .table-filter-container .filter-form .one-column .form-group .form-input {
-  margin-bottom: 1em;
-}
 .table-filter .table-filter-buttons .table-filter-button {
   display: none;
 }
 .table-filter .table-filter-buttons .table-filter-button.button-active {
-  display: block;
+  display: flex;
+  align-items: center;
 }
