--- a/resources/sass/admin/desktop/layout/_filter.scss
+++ b/resources/sass/admin/desktop/layout/_filter.scss
@@ -28,6 +28,10 @@
         &.button-active{
             display: flex;
             align-items: center;
+
+            .p{
+                font-size: 2em;
+            }
             
         }
     }
