--- a/resources/sass/admin/desktop/layout/_tabs.scss
+++ b/resources/sass/admin/desktop/layout/_tabs.scss
@@ -1,14 +1,12 @@
 .tabs{
-    width: 50%;
+    width: 100%;
     display: flex;
 
     .tab{
-
         .tab-content{
             max-height: 0;
             overflow: hidden;
         }
-  
     }
 
     .tab.active{
@@ -26,17 +24,15 @@
 .tabs-buttons{
     display: flex;
     background-color: #c2efe1;
-    border: solid grey;
     margin-bottom: 2em;
 
     .tab-button{
-        
-        margin-right: 1em;
+        margin: 0 0.5em;
         cursor: pointer;
-        padding: 0.02em;
+        padding: 0;
     }
 
     .tab-button:hover{
-        background-color:aquamarine
+        background-color:rgb(150, 160, 157)
     }
 }
