--- a/resources/sass/admin/desktop/layout/_form.scss
+++ b/resources/sass/admin/desktop/layout/_form.scss
@@ -11,7 +11,8 @@
     width: 100%; 
     margin-bottom: 1em;
     border-bottom: groove;
-    
+    display: flex;
+
 }
 
 .formulario .formulario-titulo h2{
