label save message

--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -119,6 +119,10 @@ label {
   margin-bottom: 1em;
   border-bottom: groove;
   display: flex;
+  justify-content: space-between;
+}
+.formulario .formulario-titulo #create-button:hover {
+  cursor: pointer;
 }
 
 .formulario .formulario-titulo h2 {
