--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -291,6 +291,8 @@ li {
 .save-container {
   width: 10em;
   height: 5em;
+  margin-left: 60vh;
+  margin-top: 8vh;
 }
 
 .save-message {
@@ -298,6 +300,7 @@ li {
 }
 
 #save-show.show .save-message {
+  justify-content: right;
   height: 15vh;
   margin-top: 5em;
 }
