--- a/resources/sass/admin/desktop/layout/_save.scss
+++ b/resources/sass/admin/desktop/layout/_save.scss
@@ -1,6 +1,9 @@
 .save-container{
     width: 10em;
     height: 5em;
+    margin-left: 60vh;
+    margin-top: 8vh;
+    
 }
 
 .save-message{
@@ -12,6 +15,7 @@
 #save-show.show{
 
     .save-message{
+        justify-content: right;
         height: 15vh;
         margin-top: 5em;
     }   
