--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -308,3 +308,11 @@ li {
 .show {
   display: block;
 }
+
+.table-pagination .table-pagination-buttons .table-pagination-button {
+  font-weight: bold;
+}
+.table-pagination .table-pagination-buttons .table-pagination-button:hover {
+  cursor: pointer;
+  background-color: aquamarine;
+}
