--- a/resources/sass/admin/desktop/layout/_master.scss
+++ b/resources/sass/admin/desktop/layout/_master.scss
@@ -21,9 +21,13 @@ select{
     width: 30%;
 }
 
+span{
+    display: none;
+}
+
 svg{
-    width:22px;
-    height:22px; 
+    width:25px;
+    height:25px; 
 }
 
 .global-container{
