--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -19,9 +19,13 @@ select {
   width: 30%;
 }
 
+span {
+  display: none;
+}
+
 svg {
-  width: 22px;
-  height: 22px;
+  width: 25px;
+  height: 25px;
 }
 
 .global-container {
@@ -71,6 +75,23 @@ label {
   border-bottom: groove;
 }
 
+.swipe-element {
+  display: flex;
+  width: 100%;
+  margin-bottom: 0.5em;
+  border-bottom: solid 1px;
+}
+.swipe-element .swipe-front {
+  width: 100%;
+}
+.swipe-element .swipe-back {
+  display: flex;
+  cursor: pointer;
+}
+.swipe-element .swipe-back .boton-editar {
+  margin-right: 0.5em;
+}
+
 .tabla .table-header {
   display: flex;
   font-weight: bold;
@@ -78,7 +99,7 @@ label {
   padding: 0;
 }
 .tabla .table-header p {
-  margin-right: 40%;
+  margin-right: 30%;
 }
 
 .tabla .tabla-titulo h2 {
