--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -19,10 +19,6 @@ select {
   width: 30%;
 }
 
-span {
-  display: none;
-}
-
 svg {
   width: 25px;
   height: 25px;
@@ -63,7 +59,7 @@ label {
 }
 
 .tabla {
-  width: 100%;
+  width: 40%;
   margin: 2em 0;
   border: 1px groove;
   background-color: #fff;
@@ -127,12 +123,16 @@ label {
 }
 
 .formulario {
-  width: 30%;
+  width: 50%;
   margin: 2em 2em;
   padding: 1em;
   border: 1px groove;
   border-radius: 4px;
   background-color: #fff;
+}
+
+.formulario .formulario-enviar .boton-guardar button {
+  cursor: pointer;
 }
 
 .formulario .formulario-titulo {
@@ -174,7 +174,8 @@ label {
 .formulario .formulario-contenedor .formulario-grupo .formulario-input input {
   padding: 0;
   margin: 0;
-  width: 100%;
+  height: 2em;
+  width: 40%;
 }
 
 .sidebar {
@@ -233,16 +234,18 @@ li {
 
 .tabs {
   width: 100%;
-  display: flex;
+}
+.tabs .tab {
+  width: 0;
 }
 .tabs .tab .tab-content {
   max-height: 0;
   overflow: hidden;
 }
-.tabs .tab.active {
-  width: 60%;
+.tabs .tab.active-tabs {
+  width: 100%;
 }
-.tabs .tab.active .tab-content {
+.tabs .tab.active-tabs .tab-content {
   display: block;
   max-height: 100vh;
   overflow: visible;
@@ -252,7 +255,7 @@ li {
 .tabs-buttons {
   display: flex;
   background-color: #c2efe1;
-  margin-bottom: 2em;
+  margin-bottom: 1em;
 }
 .tabs-buttons .tab-button {
   margin: 0 0.5em;
@@ -330,10 +333,93 @@ li {
   display: block;
 }
 
+.tab-language {
+  display: none;
+}
+
+.tab-language.active-tabs {
+  width: 100%;
+}
+
+.tab-language.active-tabs-locale {
+  display: block;
+  max-height: 100vh;
+  width: 100%;
+}
+
+.tab-language-buttons {
+  display: flex;
+  margin-right: 2em;
+}
+.tab-language-buttons .tab-language-button {
+  margin: 0 0.5em;
+  cursor: pointer;
+  padding: 0;
+  background-color: #c2efe1;
+  padding: 0 1em;
+  margin: 0 1em 1em 0;
+}
+.tab-language-buttons .tab-language-button:hover {
+  background-color: #96a09d;
+}
+
+.tab-language-buttons .active-tabs-locale {
+  display: block;
+}
+
 .table-pagination .table-pagination-buttons .table-pagination-button {
   font-weight: bold;
 }
 .table-pagination .table-pagination-buttons .table-pagination-button:hover {
   cursor: pointer;
   background-color: aquamarine;
+}
+
+.drop-zone {
+  max-width: 200px;
+  height: 200px;
+  padding: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  cursor: pointer;
+  color: #cccccc;
+  border: 4px dashed #009578;
+  border-radius: 10px;
+  margin-bottom: 2em;
+}
+
+.drop-zone--over {
+  border-style: solid;
+}
+
+.drop-zone__input {
+  display: none;
+}
+
+.drop-zone__thumb {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #cccccc;
+  background-size: cover;
+  position: relative;
+}
+
+.drop-zone__thumb::after {
+  content: attr(data-label);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 0;
+  color: #ffffff;
+  background: rgba(0, 0, 0, 0.75);
+  font-size: 14px;
+  text-align: center;
 }
