--- a/resources/sass/admin/desktop/app.scss
+++ b/resources/sass/admin/desktop/app.scss
@@ -8,4 +8,6 @@
 @import "layout/faqs";
 @import "layout/filter";
 @import "layout/save";
+@import "layout/tabs-locale";
 @import "layout/table-paginate";
+@import "layout/images";
