--- a/resources/sass/admin/desktop/layout/_form.scss
+++ b/resources/sass/admin/desktop/layout/_form.scss
@@ -1,10 +1,16 @@
 .formulario{
-    width: 30%;
+    width: 50%;
     margin: 2em 2em;
     padding: 1em;
     border: 1px groove;
     border-radius: 4px;
     background-color: #fff;
+}
+
+.formulario .formulario-enviar{
+    .boton-guardar button{
+       cursor: pointer;
+    }
 }
 
 .formulario .formulario-titulo{
@@ -48,5 +54,7 @@
 .formulario .formulario-contenedor .formulario-grupo .formulario-input input{
     padding: 0 ; 
     margin:0;
-    width: 100%;
+    height: 2em;
+    width: 40%;
 }
+
