--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -257,12 +257,14 @@ li {
   margin-bottom: 1em;
 }
 .tabs-buttons .tab-button {
-  margin: 0 0.5em;
   cursor: pointer;
-  padding: 0;
+  padding: 0 1em;
+}
+.tabs-buttons .tab-button.active-tabs {
+  background-color: #96a09d;
 }
 .tabs-buttons .tab-button:hover {
-  background-color: #96a09d;
+  background-color: #8bf3d4;
 }
 
 .swipe-front {
@@ -351,14 +353,15 @@ li {
   margin-right: 2em;
 }
 .tab-language-buttons .tab-language-button {
-  margin: 0 0.5em;
   cursor: pointer;
-  padding: 0;
   background-color: #c2efe1;
   padding: 0 1em;
-  margin: 0 1em 1em 0;
+  margin-bottom: 1em;
 }
 .tab-language-buttons .tab-language-button:hover {
+  background-color: #8bf3d4;
+}
+.tab-language-buttons .tab-language-button.active-tabs-locale {
   background-color: #96a09d;
 }
 
