--- a/resources/sass/admin/desktop/layout/_tabs.scss
+++ b/resources/sass/admin/desktop/layout/_tabs.scss
@@ -18,6 +18,7 @@
         max-height: 100vh;
         overflow: visible;
         width: 100%;
+
     } 
 
 
@@ -27,12 +28,19 @@
     margin-bottom: 1em;
 
     .tab-button{
-        margin: 0 0.5em;
         cursor: pointer;
-        padding: 0;
+        padding: 0 1em;
+    }
+
+    .tab-button.active-tabs{
+        background-color: rgb(150, 160, 157);
     }
 
     .tab-button:hover{
-        background-color:rgb(150, 160, 157)
+        background-color:rgb(139, 243, 212)
     }
+
+    
+        
+    
 }
