--- a/resources/sass/admin/desktop/app.scss
+++ b/resources/sass/admin/desktop/app.scss
@@ -1,5 +1,7 @@
 @charset "utf8";
 
+@import "../base/contents";
+@import "../base/normalize";
 @import "layout/master";
 @import "layout/tabla";
 @import "layout/form";
