--- a/resources/sass/admin/desktop/layout/_form.scss
+++ b/resources/sass/admin/desktop/layout/_form.scss
@@ -39,7 +39,6 @@
 
 .formulario .formulario-contenedor .formulario-grupo{
     margin-bottom: 1em;
-    width: 100%;
 }
 
 .formulario .formulario-contenedor .formulario-grupo .formulario-label{
@@ -51,10 +50,11 @@
     width: 100%;
 }
 
-.formulario .formulario-contenedor .formulario-grupo .formulario-input input{
-    padding: 0 ; 
+input,
+select{
+    padding: 0; 
     margin:0;
     height: 2em;
-    width: 40%;
+    width: 100%;
 }
 
