--- a/resources/sass/admin/mobile/app.scss
+++ b/resources/sass/admin/mobile/app.scss
@@ -8,3 +8,7 @@
 @import "layout/sidebar";
 @import "layout/faqs";
 @import "layout/filter";
+@import "layout/tabs";
+@import "layout/tabs-locale";
+@import "layout/images";
+@import "layout/save";
