--- a/resources/sass/admin/mobile/layout/_master.scss
+++ b/resources/sass/admin/mobile/layout/_master.scss
@@ -4,12 +4,12 @@ body{
 
 .global-container{
     width: 100%;
+    margin: 0 0.5em;
 }
 
 .pantalla50{
     font-size: 1em; 
     font-family: 'Montserrat', sans-serif;
-    justify-content: space-around;
 }
 
 svg{
