--- a/public/admin/mobile/css/app.css
+++ b/public/admin/mobile/css/app.css
@@ -453,12 +453,12 @@ body {
 
 .global-container {
   width: 100%;
+  margin: 0 0.5em;
 }
 
 .pantalla50 {
   font-size: 1em;
   font-family: "Montserrat", sans-serif;
-  justify-content: space-around;
 }
 
 svg {
@@ -558,16 +558,20 @@ label {
 }
 
 .formulario {
-  width: 90%;
+  width: 100%;
   justify-content: right;
-  margin: auto;
   border-radius: 4px;
   background-color: #fff;
 }
 
 .formulario .formulario-titulo {
-  margin-bottom: 10%;
+  display: flex;
+  margin: 2em 2em;
   width: 100%;
+  align-items: center;
+}
+.formulario .formulario-titulo #create-button {
+  margin-left: 2em;
 }
 
 .formulario .formulario-titulo h2 {
@@ -586,9 +590,12 @@ label {
   margin-bottom: 1em;
   width: 100%;
 }
+.formulario .formulario-contenedor .formulario-grupo .form-input select {
+  height: 2em;
+}
 
 .formulario .formulario-contenedor .formulario-grupo .formulario-label {
-  margin-bottom: 0.5em;
+  margin-bottom: 0.7em;
   width: 100%;
 }
 
@@ -625,6 +632,7 @@ label {
 }
 
 .dropdown {
+  display: flex;
   text-align: center;
 }
 
@@ -693,6 +701,19 @@ li {
   max-height: 50vh;
   overflow: visible;
 }
+.table-filter .form-label {
+  margin: 0.5em 0.5em;
+}
+.table-filter .form-input {
+  margin: 0.5em 0.5em;
+  overflow: hidden;
+}
+.table-filter .form-input input {
+  height: 2em;
+}
+.table-filter .form-input select {
+  height: 2em;
+}
 .table-filter .table-filter-buttons {
   margin: 0 1em;
 }
@@ -706,4 +727,144 @@ li {
 .table-filter .table-filter-buttons .table-filter-button.button-active {
   display: flex;
   align-items: center;
+}
+
+.tab {
+  display: none;
+}
+.tab .tab-content {
+  max-height: 0;
+  overflow: hidden;
+}
+
+.tab.active-tabs {
+  display: block;
+}
+
+.tab.active-tabs .tab-content {
+  display: block;
+  max-height: 100vh;
+  overflow: visible;
+  width: 100%;
+}
+
+.tabs-buttons {
+  display: flex;
+  background-color: #c2efe1;
+  margin-bottom: 1em;
+}
+.tabs-buttons .tab-button {
+  cursor: pointer;
+  padding: 0 1em;
+}
+.tabs-buttons .tab-button.active-tabs {
+  background-color: #96a09d;
+}
+.tabs-buttons .tab-button:hover {
+  background-color: #8bf3d4;
+}
+
+.tab-language {
+  display: none;
+}
+
+.tab-language.active-tabs {
+  width: 100%;
+}
+
+.tab-language.active-tabs-locale {
+  display: block;
+  max-height: 100vh;
+  width: 100%;
+}
+
+.tab-language-buttons {
+  display: flex;
+  margin-right: 2em;
+}
+.tab-language-buttons .tab-language-button {
+  cursor: pointer;
+  background-color: #c2efe1;
+  padding: 0 1em;
+  margin-bottom: 1em;
+}
+.tab-language-buttons .tab-language-button:hover {
+  background-color: #8bf3d4;
+}
+.tab-language-buttons .tab-language-button.active-tabs-locale {
+  background-color: #96a09d;
+}
+
+.tab-language-buttons .active-tabs-locale {
+  display: block;
+}
+
+.drop-zone {
+  max-width: 200px;
+  height: 200px;
+  padding: 25px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  font-family: "Quicksand", sans-serif;
+  font-weight: 500;
+  font-size: 20px;
+  cursor: pointer;
+  color: #cccccc;
+  border: 4px dashed #009578;
+  border-radius: 10px;
+  margin: auto auto 2em auto;
+}
+
+.drop-zone--over {
+  border-style: solid;
+}
+
+.drop-zone__input {
+  display: none;
+}
+
+.drop-zone__thumb {
+  width: 100%;
+  height: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+  background-color: #cccccc;
+  background-size: cover;
+  position: relative;
+}
+
+.drop-zone__thumb::after {
+  content: attr(data-label);
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px 0;
+  color: #ffffff;
+  background: rgba(0, 0, 0, 0.75);
+  font-size: 14px;
+  text-align: center;
+}
+
+.save-container {
+  width: 10em;
+  height: 5em;
+  margin-left: 60vh;
+  margin-top: 8vh;
+}
+
+.save-message {
+  display: none;
+}
+
+#save-show.show .save-message {
+  justify-content: right;
+  height: 15vh;
+  margin-top: 5em;
+}
+
+.show {
+  display: block;
 }
