--- a/resources/sass/admin/desktop/app.scss
+++ b/resources/sass/admin/desktop/app.scss
@@ -12,4 +12,4 @@
 @import "layout/save";
 @import "layout/tabs-locale";
 @import "layout/table-paginate";
-@import "layout/images";
+@import "layout/upload";
