--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -654,8 +654,8 @@ select {
   margin-top: 5em;
 }
 
-.show {
-  display: block;
+.dropdown .show {
+  display: flex;
 }
 
 .dropdown-show {
@@ -776,10 +776,6 @@ li {
   margin-top: 5em;
 }
 
-.show {
-  display: block;
-}
-
 .tab-language {
   display: none;
 }
@@ -823,33 +819,52 @@ li {
   background-color: aquamarine;
 }
 
-.drop-zone {
-  max-width: 200px;
-  height: 200px;
-  padding: 25px;
-  display: flex;
+.upload {
   align-items: center;
-  justify-content: center;
-  text-align: center;
-  font-family: "Quicksand", sans-serif;
-  font-weight: 500;
-  font-size: 20px;
-  cursor: pointer;
+  border: 0.2em dashed #02a8b1;
   color: #cccccc;
-  border: 4px dashed #009578;
-  border-radius: 10px;
+  cursor: pointer;
+  display: flex;
+  font-size: 1.2em;
+  font-weight: 500;
+  height: 15vh;
+  justify-content: center;
+  margin-top: 1em;
+  padding: 1em;
+  width: 25%;
+  text-align: center;
   margin-bottom: 2em;
 }
 
-.drop-zone--over {
+.upload:hover {
+  border: 4px dashed #ff5100;
+}
+
+.upload-over {
   border-style: solid;
 }
 
-.drop-zone__input {
+.upload-prompt {
+  position: absolute;
+  width: 15%;
+  z-index: 999;
+}
+
+.upload-icon {
+  position: absolute;
+  width: 15%;
+  z-index: 999;
+}
+.upload-icon svg {
+  width: 40px;
+  height: 40px;
+}
+
+.upload-input {
   display: none;
 }
 
-.drop-zone__thumb {
+.upload-thumb {
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -859,7 +874,7 @@ li {
   position: relative;
 }
 
-.drop-zone__thumb::after {
+.upload-thumb::after {
   content: attr(data-label);
   position: absolute;
   bottom: 0;
