--- a/resources/sass/admin/desktop/app.scss
+++ b/resources/sass/admin/desktop/app.scss
@@ -13,3 +13,6 @@
 @import "layout/tabs-locale";
 @import "layout/table-paginate";
 @import "layout/upload";
+@import "layout/images";
+@import "layout/modal-delete";
+@import "layout/modal-image";
