image-upload fix

--- a/resources/sass/admin/desktop/app.scss
+++ b/resources/sass/admin/desktop/app.scss
@@ -12,7 +12,7 @@
 @import "layout/save";
 @import "layout/tabs-locale";
 @import "layout/table-paginate";
-@import "layout/upload";
+@import "layout/upload-image";
 @import "layout/images";
 @import "layout/modal-delete";
 @import "layout/modal-image";
