--- a/public/admin/desktop/css/app.css
+++ b/public/admin/desktop/css/app.css
@@ -642,7 +642,7 @@ select {
 
 .dropdown {
   display: flex;
-  text-align: center;
+  padding: 1em 2em;
 }
 
 .dropdown .dropdown-title {
@@ -819,7 +819,8 @@ li {
   background-color: aquamarine;
 }
 
-.upload {
+.upload-image,
+.upload-image-add {
   align-items: center;
   border: 0.2em dashed #02a8b1;
   color: #cccccc;
@@ -827,44 +828,66 @@ li {
   display: flex;
   font-size: 1.2em;
   font-weight: 500;
-  height: 15vh;
+  height: 30vh;
   justify-content: center;
-  margin-top: 1em;
-  padding: 1em;
-  width: 25%;
+  padding: 0.5em;
   text-align: center;
-  margin-bottom: 2em;
 }
 
-.upload:hover {
+.upload-image-add.single {
+  border: none;
+}
+
+.upload-image-collection {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-gap: 10px;
+}
+
+.upload-image.collection,
+.upload-image-add.collection {
+  height: 15vh;
+  padding: 0;
+}
+
+.upload-image:hover,
+.upload-image-add:hover {
   border: 4px dashed #ff5100;
 }
 
-.upload-over {
+.upload-image-over {
   border-style: solid;
 }
 
-.upload-prompt {
+.upload-image-prompt {
   position: absolute;
   width: 15%;
   z-index: 999;
 }
 
-.upload-icon {
-  position: absolute;
-  width: 15%;
-  z-index: 999;
-}
-.upload-icon svg {
-  width: 40px;
-  height: 40px;
-}
-
-.upload-input {
+.upload-image-options {
   display: none;
 }
 
-.upload-thumb {
+.upload-image:hover .upload-image-options {
+  display: initial;
+  position: absolute;
+  width: 15%;
+  z-index: 999;
+}
+.upload-image:hover .upload-image-options svg {
+  height: 1.2em;
+  width: 1.2em;
+}
+.upload-image:hover .upload-image-options svg path {
+  fill: white;
+}
+
+.upload-image-input {
+  display: none;
+}
+
+.upload-image-thumb {
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -872,9 +895,10 @@ li {
   background-color: #cccccc;
   background-size: cover;
   position: relative;
+  z-index: 900;
 }
 
-.upload-thumb::after {
+.upload-image-thumb::after {
   content: attr(data-label);
   position: absolute;
   bottom: 0;
@@ -882,7 +906,6 @@ li {
   width: 100%;
   padding: 5px 0;
   color: #ffffff;
-  background: rgba(0, 0, 0, 0.75);
   font-size: 14px;
   text-align: center;
 }
