--- a/resources/sass/admin/desktop/layout/_upload-image.scss
+++ b/resources/sass/admin/desktop/layout/_upload-image.scss
@@ -1,4 +1,5 @@
-.upload {
+.upload-image,
+.upload-image-add{
     align-items: center;
     border: 0.2em dashed hsl(183, 98%, 35%);
     color: #cccccc;
@@ -6,54 +7,79 @@
     display: flex;
     font-size: 1.2em;
     font-weight: 500;
-    height: 15vh;
+    height: 30vh;
     justify-content: center;
-    margin-top: 1em;
-    padding: 1em;
-    width: 25%;
+    padding: 0.5em;
     text-align: center;
-    margin-bottom: 2em;
 }
 
-.upload:hover{
+.upload-image-add.single{
+    border: none;
+}
+
+.upload-image-collection{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 10px;
+}
+
+.upload-image.collection,
+.upload-image-add.collection{
+    height: 15vh;
+    padding: 0;
+}
+
+.upload-image:hover,
+.upload-image-add:hover{
     border: 4px dashed hsl(19, 100%, 50%);
 }
   
-.upload-over {
+.upload-image-over {
     border-style: solid;
 }
 
-.upload-prompt{
+.upload-image-prompt{
     position: absolute;
     width: 15%;
     z-index: 999;
 }
 
-.upload-icon{
-    position: absolute;
-    width: 15%;
-    z-index: 999;
-        svg{
-            width:40px;
-            height:40px
-        }
-}
-
-.upload-input {
+.upload-image-options{
     display: none;
 }
 
-.upload-thumb {
+.upload-image:hover .upload-image-options{
+    display: initial;
+    position: absolute;
+    width: 15%;
+    z-index: 999;
+
+    svg{
+        height: 1.2em;
+        width: 1.2em;
+
+        path{
+            fill: hsl(0, 0%, 100%);
+        }
+    }
+}
+
+.upload-image-input {
+    display: none;
+}
+
+.upload-image-thumb {
     width: 100%;
     height: 100%;
     border-radius: 10px;
     overflow: hidden;
-    background-color: #cccccc;
+    background-color: hsl(0, 0%, 80%);
     background-size: cover;
     position: relative;
+    z-index: 900;
 }
 
-.upload-thumb::after {
+.upload-image-thumb::after {
 content: attr(data-label);
     position: absolute;
     bottom: 0;
@@ -61,7 +87,7 @@ content: attr(data-label);
     width: 100%;
     padding: 5px 0;
     color: #ffffff;
-    background: rgba(0, 0, 0, 0.75);
     font-size: 14px;
     text-align: center;
 }
+
