--- a/resources/sass/admin/desktop/layout/_upload-image.scss
+++ b/resources/sass/admin/desktop/layout/_upload-image.scss
@@ -1,7 +1,7 @@
 .upload-image,
 .upload-image-add{
     align-items: center;
-    border: 0.2em dashed hsl(183, 98%, 35%);
+    border: 0.15em dashed hsl(183, 98%, 35%);
     color: #cccccc;
     cursor: pointer;
     display: flex;
@@ -11,11 +11,10 @@
     justify-content: center;
     padding: 0.5em;
     text-align: center;
+    margin-bottom: 2em;
 }
 
-.upload-image-add.single{
-    border: none;
-}
+
 
 .upload-image-collection{
     display: grid;
