--- a/public/front/desktop/css/app.css
+++ b/public/front/desktop/css/app.css
@@ -11,7 +11,7 @@
 }
 
 .faqs {
-  width: 70%;
+  width: 80%;
 }
 .faqs .faq {
   margin-bottom: 1em;
@@ -20,7 +20,7 @@
   background-color: #7DCEA0;
   display: flex;
   justify-content: space-between;
-  padding: 0.5em;
+  padding: 0 1em;
 }
 .faqs .faq .faq-header .faq-title h2 {
   color: black;
@@ -53,4 +53,8 @@
 }
 .faqs .faq.active .faq-description {
   max-height: 100vh;
+}
+
+.faqs .faq-active .faq-description .desktop-featured {
+  display: flex;
 }
